--- a/monitoring/trellis/security-scan.yml
+++ b/monitoring/trellis/security-scan.yml
@@ -12,7 +12,8 @@
     project_root: "{{ www_root }}/{{ site }}"
     scan_hours: "{{ hours | default('24') }}"
     alert_threshold: "{{ threshold | default('100') }}"
-    log_file: "/var/log/nginx/access.log"
+    # Log file path - defaults to per-site logs, can be overridden with -e log_file=/path/to/log
+    log_file: "{{ log_path | default(project_root + '/logs/access.log') }}"
 
   pre_tasks:
     - name: Ensure site is valid
