--- a/monitoring/trellis/traffic-report.yml
+++ b/monitoring/trellis/traffic-report.yml
@@ -11,7 +11,8 @@
     project: "{{ wordpress_sites[site] }}"
     project_root: "{{ www_root }}/{{ site }}"
     report_hours: "{{ hours | default('24') }}"
-    log_file: "/var/log/nginx/access.log"
+    # Log file path - defaults to per-site logs, can be overridden with -e log_file=/path/to/log
+    log_file: "{{ log_path | default(project_root + '/logs/access.log') }}"
 
   pre_tasks:
     - name: Ensure site is valid
